[package]
name = "ipfs-mfs-fuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.8"
env_logger = "0.10.0"
fuser = { version = "0.12.0", features = ["serde", "serializable"] }
futures = "0.3.26"
hyper = { version = "0.14.24", features = ["full"] }
ipfs-api-backend-hyper = "0.6.0"
libc = "0.2.139"
log = "0.4.17"
serde = {version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"]}
tokio-uring = "0.4.0"
